edit: 들었던 수업내용 상세 표기

--- a/JAVA1/실행환경_및_데이터타입/JeongJun/1.HelloWorld실행.md
+++ b/JAVA1/실행환경_및_데이터타입/JeongJun/1.HelloWorld실행.md
@@ -1,7 +1,8 @@
-# 1. 수업소개
+# 4.1강 실행 - Hello World
 
 - 2023/09/17
-- 1강 실행 환경 갖추기 및 Hello World 찍어보기
+- 4.1강 Hello World 출력해보기
+  - 1강부터 3강까지는 수업 소개 및 실행환경 세팅이므로 정리 생략
 
 <br/>
 
