edit: 출력 문법 단축어 설명 추가

--- a/JAVA1/실행환경_및_데이터타입/JeongJun/1.HelloWorld실행.md
+++ b/JAVA1/실행환경_및_데이터타입/JeongJun/1.HelloWorld실행.md
@@ -33,6 +33,7 @@ public class Test {
 
 - java에는 약속된 규칙같은 것이 있다.
   - 이를 기반으로 java app이 실행된다.
+- `sysout`라는 단축어를 통해 `System.out.println()` 출력 명령어를 쉽게 작성할 수 있다.
 
 <br/>
 
